--- a/hmtls/home.html
+++ b/hmtls/home.html
@@ -4,199 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevSphere - Learning Management System</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
 
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            color: #333;
-        }
-
-        header {
-            background-color: rgba(255, 255, 255, 0.95);
-            padding: 20px 0;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        .logo {
-            font-size: 24px;
-            font-weight: bold;
-            color: #667eea;
-        }
-
-        nav a {
-            margin-left: 30px;
-            text-decoration: none;
-            color: #333;
-            transition: color 0.3s;
-        }
-
-        nav a:hover {
-            color: #667eea;
-        }
-
-        .auth-buttons {
-            display: flex;
-            gap: 10px;
-        }
-
-        .btn {
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: all 0.3s;
-            font-size: 14px;
-        }
-
-        .btn-login {
-            background-color: transparent;
-            color: #667eea;
-            border: 2px solid #667eea;
-        }
-
-        .btn-login:hover {
-            background-color: #667eea;
-            color: white;
-        }
-
-        .btn-signup {
-            background-color: #667eea;
-            color: white;
-        }
-
-        .btn-signup:hover {
-            background-color: #764ba2;
-        }
-
-        .hero {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 80px 20px;
-            text-align: center;
-            color: white;
-        }
-
-        .hero h1 {
-            font-size: 48px;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-        }
-
-        .hero p {
-            font-size: 20px;
-            margin-bottom: 30px;
-            opacity: 0.95;
-        }
-
-        .hero .btn {
-            padding: 15px 40px;
-            font-size: 16px;
-            margin: 10px;
-        }
-
-        .btn-primary {
-            background-color: white;
-            color: #667eea;
-            font-weight: bold;
-        }
-
-        .btn-primary:hover {
-            background-color: #f0f0f0;
-        }
-
-        .btn-secondary {
-            background-color: rgba(255, 255, 255, 0.2);
-            color: white;
-            border: 2px solid white;
-        }
-
-        .btn-secondary:hover {
-            background-color: rgba(255, 255, 255, 0.3);
-        }
-
-        .features {
-            max-width: 1200px;
-            margin: 60px auto;
-            padding: 0 20px;
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-        }
-
-        .feature-card {
-            background: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            transition: transform 0.3s;
-        }
-
-        .feature-card:hover {
-            transform: translateY(-10px);
-        }
-
-        .feature-icon {
-            font-size: 48px;
-            margin-bottom: 15px;
-        }
-
-        .feature-card h3 {
-            margin-bottom: 10px;
-            color: #667eea;
-        }
-
-        .feature-card p {
-            color: #666;
-            line-height: 1.6;
-        }
-
-        footer {
-            background-color: rgba(0, 0, 0, 0.1);
-            color: white;
-            text-align: center;
-            padding: 20px;
-            margin-top: 60px;
-        }
-
-        @media (max-width: 768px) {
-            .navbar {
-                flex-direction: column;
-                gap: 15px;
-            }
-
-            nav {
-                display: none;
-            }
-
-            .hero h1 {
-                font-size: 32px;
-            }
-
-            .hero p {
-                font-size: 16px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="homecss.css">
+    
 </head>
 <body>
     <header>
@@ -208,7 +18,7 @@
                 <a href="#contact">Contact</a>
             </nav>
             <div class="auth-buttons">
-                <button class="btn btn-login">Login</button>
+                <button class="btn btn-login">Log in</button>
                 <button class="btn btn-signup">Sign Up</button>
             </div>
         </div>
@@ -216,7 +26,7 @@
 
     <div class="hero">
         <h1>Welcome to EduHub</h1>
-        <p>Your comprehensive Learning Management System for seamless education</p>
+        <p>Your comprehensive Learning Management System for seamless education.</p>
         <button class="btn btn-primary">Get Started</button>
         <button class="btn btn-secondary">Learn More</button>
     </div>
@@ -257,5 +67,9 @@
     <footer>
         <p>&copy; 2026 DevSphere. All rights reserved.</p>
     </footer>
+
+
+    <script src="homejs.js"></script>
+
 </body>
 </html>
