--- a/hmtls/homeland.html
+++ b/hmtls/homeland.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduHub</title>
+    <title>Home.EduHub</title>
 
     <link rel="stylesheet" href="homecss.css">
     
@@ -17,16 +17,13 @@
                 <a href="#about">About</a>
                 <a href="#contact">Contact</a>
             </nav>
-            <div class="auth-buttons">
-                <button class="btn btn-login">Log in</button>
-                <button class="btn btn-signup">Sign Up</button>
-            </div>
+            
         </div>
     </header>
 
     <div class="hero">
-        <h1>Welcome to EduHub</h1>
-        <p>Your comprehensive Learning Management System for seamless education.</p>
+        <div id="rainbow">Welcome to EduHub</div>
+        <p id="typing-text"></p><br>
         <button class="btn btn-primary">Get Started</button>
         <button class="btn btn-secondary">Learn More</button>
     </div>
@@ -65,7 +62,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 DevSphere. All rights reserved.</p>
+        <p id="footer-typing-text"></p>
     </footer>
 
 
