--- a/homeetc/homeland.html
+++ b/homeetc/homeland.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevSphere - Learning Management System</title>
+    <title>EduHub - Home</title>
 
     <link rel="stylesheet" href="homecss.css">
     
@@ -17,10 +17,7 @@
                 <a href="#about">About</a>
                 <a href="#contact">Contact</a>
             </nav>
-            <div class="auth-buttons">
-                <button class="btn btn-login" onclick="window.location.href ='login.html'">Log in</button>
-                <button class="btn btn-signup" onclick="window.location.href ='register.html'">Sign Up</button>
-            </div>
+            
         </div>
     </header>
 
