--- a/hmtls/home.html
+++ b/hmtls/home.html
@@ -27,8 +27,8 @@
     <div class="hero">
         <h1>Welcome to EduHub</h1>
         <p>Your comprehensive Learning Management System for seamless education.</p>
-        <button class="btn btn-primary">Get Started</button>
-        <button class="btn btn-secondary">Learn More</button>
+        <button class="btn btn-primary" onclick="window.location.href ='login.html'">Get Started</button>
+        <button class="btn btn-secondary" onclick="window.location.href ='about.html'">Learn More</button>
     </div>
 
     <section class="features" id="features">
