--- a/homeetc/homeland.html
+++ b/homeetc/homeland.html
@@ -23,9 +23,8 @@
 
     <div class="hero">
         <h1>Welcome to EduHub</h1>
-        <p>Your comprehensive Learning Management System for seamless education.</p>
-        <button class="btn btn-primary">Get Started</button>
-        <button class="btn btn-secondary">Learn More</button>
+        <p id="typing-text"></p><br>
+        <button class="btn btn-primary" onclick="window.location.href ='/lms/dashboard.html'">Dashboard</button>
     </div>
 
     <section class="features" id="features">
@@ -62,7 +61,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 DevSphere. All rights reserved.</p>
+        <p id="footer-typing-text"></p>
     </footer>
 
 
