--- a/lms/dashboard.html
+++ b/lms/dashboard.html
@@ -51,8 +51,8 @@ style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6A
 <p class="text-sm font-medium leading-normal">Dashboard</p>
 </a>
 <a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 hover:bg-slate-100 dark:text-slate-400 dark:hover:bg-slate-800 transition-colors" href="#">
-<span class="material-symbols-outlined text-xl">local_library</span>
-<p class="text-sm font-medium leading-normal" onclick="window.location.href ='login.html'">My Courses</p>
+<span class="material-symbols-outlined text-xl" onclick="window.location.href ='mycourses.html'">local_library</span>
+<p class="text-sm font-medium leading-normal" onclick="window.location.href ='mycourses.html'">My Courses</p>
 </a>
 <a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 hover:bg-slate-100 dark:text-slate-400 dark:hover:bg-slate-800 transition-colors" href="#">
 <span class="material-symbols-outlined text-xl">calendar_month</span>
@@ -70,7 +70,7 @@ style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6A
 </div>
 <div class="p-4">
 <button class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-primary text-white text-sm font-bold leading-normal tracking-[0.015em] hover:bg-blue-700 transition-colors">
-<span class="truncate">Log Out</span>
+<span class="truncate" onclick="window.location.href ='/homeetc/home.html'">Log Out</span>
 </button>
 </div>
 </aside>
@@ -109,8 +109,8 @@ style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6A
 <div class="mx-auto max-w-7xl flex flex-col gap-6">
 <!-- Heading -->
 <div class="flex flex-col gap-1">
-<h1 class="text-[#0d121b] dark:text-white text-3xl md:text-4xl font-black leading-tight tracking-[-0.033em]">Welcome back, Alex</h1>
-<p class="text-[#4c669a] dark:text-slate-400 text-base font-normal leading-normal">You have 3 assignments due this week.</p>
+<h1 class="text-[#0d121b] dark:text-white text-3xl md:text-4xl font-black leading-tight tracking-[-0.033em]">Welcome,</h1>
+<p class="text-[#4c669a] dark:text-slate-400 text-base font-normal leading-normal">EduHub your comprehensive  LMS.</p>
 </div>
 <!-- Stats Row -->
 <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
