--- a/homeetc/home.html
+++ b/homeetc/home.html
@@ -25,10 +25,10 @@
     </header>
 
     <div class="hero">
-        <h1>Welcome to EduHub</h1>
+        <h2>Welcome to EduHub</h2>
         <p>Your comprehensive Learning Management System for seamless education.</p>
-        <button class="btn btn-primary">Get Started</button>
-        <button class="btn btn-secondary">Learn More</button>
+        <button class="btn btn-primary" onclick="window.location.href ='login.html'">Get Started</button>
+        <button class="btn btn-secondary" onclick="window.location.href ='about.html'">Learn More</button>
     </div>
 
     <section class="features" id="features">
