--- a/homeetc/home.html
+++ b/homeetc/home.html
@@ -14,8 +14,8 @@
             <div class="logo">EduHub</div>
             <nav>
                 <a href="#features">Features</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
             </nav>
             <div class="auth-buttons">
                 <button class="btn btn-login" onclick="window.location.href ='login.html'">Log in</button>
