--- a/homeetc/homeland.html
+++ b/homeetc/homeland.html
@@ -14,8 +14,8 @@
             <div class="logo">EduHub</div>
             <nav>
                 <a href="#features">Features</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
             </nav>
             
         </div>
