--- a/homeetc/homeland.html
+++ b/homeetc/homeland.html
@@ -14,8 +14,8 @@
             <div class="logo">EduHub</div>
             <nav>
                 <a href="#features">Features</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
+                <a onclick="window.location.href ='about.html'" style="cursor: pointer;" >About</a>
+                <a onclick="window.location.href ='contact.html'" style="cursor: pointer;"  >Contact</a>
             </nav>
             
         </div>
