--- a/lms/dashboard.html
+++ b/lms/dashboard.html
@@ -98,7 +98,7 @@ style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6A
 <span class="material-symbols-outlined text-[24px]">notifications</span>
 </button>
 <button class="flex items-center justify-center rounded-full size-10 hover:bg-slate-100 dark:hover:bg-slate-800 text-[#0d121b] dark:text-white transition-colors">
-<span class="material-symbols-outlined text-[24px]">settings</span>
+<span class="material-symbols-outlined text-[24px]" onclick="window.location.href ='myinfo.html'" style="cursor: pointer;" >settings</span>
 </button>
 </div>
 <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10 ring-2 ring-white dark:ring-slate-700 cursor-pointer" data-alt="User profile picture of a young man smiling" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuB939bfW1wLYN6rO1nnYZeR6IcaWc6SfKonFC2ZRBeWNtLio7GwWxsN6_T_uv4wcBkU0A_cttTkfR7eeSSzfAPrjXDD9vDU8ZjmsDbufSyyQH__vOQ8nMICHhSIdJ9b6be780ln5qQPMigIfyoytmPz2_LOR5f7-DG-PQ8O_pDKwzS7U6NvZCU6xvfocpe5li5O2qDnxFMeZjiE4S3TMc68_ViHlARxjbj2aeedJoMg-iUpq4md3BDRiw88frqXleh2ytPsIR_OlyA");'></div>
