--- a/homeetc/contact.html
+++ b/homeetc/contact.html
@@ -31,7 +31,7 @@
             <div class="section-content contact-section">
                 <div class="left">
                     <p>
-                      <strong> Have a question or want to work with us?</strong> 
+                      <strong> Have a question or want to work with us ?</strong> 
                         Fill out the form and we will get back to you soon.
                     </p><br>
 
@@ -42,7 +42,7 @@
                         <input type="text" placeholder="Your Name" required>
                         <input type="email" placeholder="Your Email" required>
                         <input type="text" placeholder="Subject">
-                        <textarea rows="5" placeholder="Your Message" required></textarea>
+                        <textarea rows="5" placeholder="Your Message" required></textarea><br>
                         <button type="submit">Send Message</button>
                     </form>
                 </div>
